envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: 
      address: 0.0.0.0 # allow external calling
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8299
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: model_service
              domains: ["*"]
              routes:
              - match: 
                  prefix: "/qwen2.5"
                route: 
                  cluster: qwen2.5_cluster
                  prefix_rewrite: "/"
              - match: 
                  prefix: "/qwen3.0"
                route: 
                  cluster: qwen3.0_cluster
                  prefix_rewrite: "/"
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  
  clusters:

  # qwen2.5
  - name: qwen2.5_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    dns_resolvers:
    - socket_address:
        address: 127.0.0.11
        port_value: 53  
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: qwen2.5_cluster
      endpoints:
      - locality:
          region: "local"
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: qwen2.5
                port_value: 8299
    
    health_checks:
    - timeout: 5s
      interval: 10s
      unhealthy_threshold: 2
      healthy_threshold: 2
      http_health_check:
        path: "/health"
  
  # qwen3.0
  - name: qwen3.0_cluster
    connect_timeout: 5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    dns_resolvers:
    - socket_address:
        address: 127.0.0.11
        port_value: 53  
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: qwen3.0_cluster
      endpoints:
      - locality:
          region: "local"
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: qwen3.0
                port_value: 8299
    
    health_checks:
    - timeout: 5s
      interval: 10s
      unhealthy_threshold: 2
      healthy_threshold: 2
      http_health_check:
        path: "/health"

stats_config:
  use_all_default_tags: true
  stats_tags:
    - tag_name: cluster_name
      regex: "^cluster\\.((.+?)\\.)"
    - tag_name: upstream_address
      regex: "((?:[0-9]{1,3}\\.){3}[0-9]{1,3}:[0-9]+)$"

layered_runtime:
  layers:
    - name: static_layer
      static_layer:
        overload:
          global_downstream_max_connections: 1000
